--- a/client_src/src/index.css
+++ b/client_src/src/index.css
@@ -3,3 +3,50 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+.App {
+  font-family: "Istok Web", sans-serif;
+}
+button {
+  background-color: coral;
+  color: #fff;
+}
+.imageTop {
+  width: 100%;
+  max-height: 300px;
+  overflow: hidden;
+}
+
+.row {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+}
+.card {
+  width: 450px;
+}
+
+.row {
+  margin: 0 !important;
+}
+
+.col {
+  justify-content: center;
+  display: flex;
+  margin: 0 !important;
+  padding: 0 !important;
+}
+
+@media only screen and (max-width: 768px) {
+  .card {
+    width: 350px;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .card {
+    width: 350px;
+  }
+}
